--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>porto faiz</title>
+    <title>Portofolio faiz</title>
   </head>
   <body>
     <header>
