--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href="https://facebook.com/faiz.bintang.96" class="fb" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://x.com/Starsyfr2?t=XiahmCm3gIlPhDOxW0dvNA&s=09" class="tw" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://instagram.com/faiz_pratama02" class="ig" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://github.com/Faizpy" class="gh" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Faizpi" class="gh" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </section>
@@ -320,7 +320,7 @@
         <a href="https://instagram.com/faiz_pratama02" class="ig" target="_blank"
           ><i class="fab fa-instagram"></i
         ></a>
-        <a href="https://github.com/Faizpy" class="gh" target="_blank"
+        <a href="https://github.com/Faizpi" class="gh" target="_blank"
           ><i class="fab fa-github"></i
         ></a>
       </div>
