--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </div>
   </section>
     <section class="contact" id="contact">
-      <h2 class="title">Get In Touch With Me</h2>
+      <h2 class="title">Let's Connect</h2>
       <div class="content">
         <div class="card">
           <div class="icon">
