--- a/index.html
+++ b/index.html
@@ -325,6 +325,6 @@
         ></a>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
