--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <title>Portofolio faiz</title>
   </head>
@@ -40,21 +37,29 @@
           <a href="https://facebook.com/faiz.bintang.96" class="fb" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://x.com/Starsyfr2?t=XiahmCm3gIlPhDOxW0dvNA&s=09" class="tw" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://instagram.com/faiz_pratama02" class="ig" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://github.com/Faizpi" class="gh" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Faizpy" class="gh" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </section>
-    <section class="#about" id="about">
+    <section class="about" id="about">
       <div class="text">
-        <h2>About Me</h2>
-        <p>
-          Hello! My name is Muhammad Faiz Bintang Pratama, a passionate Junior Programmer with a keen interest in creating impactful software and Cloud Computing. I am dedicated to building programs that have the potential to change the world for the better. With a strong foundation in various programming languages and a continuous desire to learn and grow, I aim to contribute meaningfully to the tech community.
-        </p>
-        <p>
-          When I'm not coding, you can find me exploring new technologies, reading about the latest advancements in software development, or contributing to open-source projects. I have a deep interest in cloud computing technology, which revolutionizes how we harness computational resources and provides IT solutions more efficiently. I actively explore new technologies and stay updated on the latest developments in software development, while also contributing to open-source projects. I believe in the power of collaboration and the importance of sharing knowledge, which is reflected in my active participation in tech forums and communities.
-        </p>        
+          <h1>About Me</h1>
+          <div class="about-content">
+              <div class="photo-container">
+                  <img src="images/profil.jpg" alt="Muhammad Faiz Bintang Pratama">
+              </div>
+              <div class="vertical-line"></div>
+              <div class="description">
+                  <p>
+                      Hello! My name is Muhammad Faiz Bintang Pratama, a passionate Junior Programmer with a keen interest in creating impactful software and Cloud Computing. I am dedicated to building programs that have the potential to change the world for the better. With a strong foundation in various programming languages and a continuous desire to learn and grow, I aim to contribute meaningfully to the tech community.
+                  </p>
+                  <p>
+                      When I'm not coding, you can find me exploring new technologies, reading about the latest advancements in software development, or contributing to open-source projects. I have a deep interest in cloud computing technology, which revolutionizes how we harness computational resources and provides IT solutions more efficiently. I actively explore new technologies and stay updated on the latest developments in software development, while also contributing to open-source projects. I believe in the power of collaboration and the importance of sharing knowledge, which is reflected in my active participation in tech forums and communities.
+                  </p>
+              </div>
+          </div>
       </div>
-    </section>
+  </section>
 <section class="projects" id="projects">
   <h2 class="title">Projects</h2>
   <div class="content">
@@ -284,7 +289,7 @@
     </div>
   </section>
     <section class="contact" id="contact">
-      <h2 class="title">Let's Connect</h2>
+      <h2 class="title">Get In Touch With Me</h2>
       <div class="content">
         <div class="card">
           <div class="icon">
@@ -320,7 +325,7 @@
         <a href="https://instagram.com/faiz_pratama02" class="ig" target="_blank"
           ><i class="fab fa-instagram"></i
         ></a>
-        <a href="https://github.com/Faizpi" class="gh" target="_blank"
+        <a href="https://github.com/Faizpy" class="gh" target="_blank"
           ><i class="fab fa-github"></i
         ></a>
       </div>
