--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <title>Portofolio faiz</title>
   </head>
   <body>
+    <div id="cursor-background"></div>
     <header>
-      <a class="logo" href="#">Faiz</a>
+      <a class="logo" href="#"><img src="images/1LG9.gif" alt="Pixel Art" style="width: 28px; height: auto;">Faiz</a>
       <nav class="navigation">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
-        <a href="#Certifficate">Certiffiate</a>
+        <a href="#Certifficate">Certificate</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -39,6 +40,8 @@
           <a href="https://instagram.com/faiz_pratama02" class="ig" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://github.com/Faizpy" class="gh" target="_blank"><i class="fab fa-github"></i></a>
         </div>
+        <img src="images/XOsa.gif" alt="Pixel Art" style="width: 100px; height: auto;">
+        <img src="images/XOsa.gif" alt="Pixel Art" style="width: 100px; height: auto;">
       </div>
     </section>
     <section class="about" id="about">
@@ -71,7 +74,7 @@
         <p class="project-catogrey">My First Portofolio</p>
         <strong class="project-title">
           <span>HTML,CSS,JS</span>
-          <a class="more-details" href="https://www.youtube.com/channel/UC6DpZxdz4H3kIjNciZYktOQ" target="_blank">More Details</a>
+          <a class="more-details" href="https://github.com/Faizpi/myportofolio" target="_blank">More Details</a>
         </strong>
       </div>
     </div>
@@ -113,13 +116,13 @@
     </div>
     <div class="project-card">
       <div class="project-image">
-        <img src="images/pjt4.png" alt="Mountain-image" />
+        <img src="images/pjt7.jpg" alt="Mountain-image" />
       </div>
       <div class="project-info">
         <p class="project-catogrey">Daftar Pasien Dokter Kulit | Django| Tugas Bahasa pemrograman 2</p>
         <strong class="project-title">
           <span>Django,sqlite</span>
-          <a class="more-details" href="#" target="_blank">More Details</a>
+          <a class="more-details" href="https://github.com/Faizpi/Django-FaizDermaSolution" target="_blank">More Details</a>
         </strong>
       </div>
     </div>
@@ -196,6 +199,28 @@
     </div>
     <div class="card">
       <div class="icon">
+        <i class="far fa-lightbulb"></i>
+      </div>
+      <div class="info">
+        <h3>Figma</h3>
+        <p>
+          I am skilled in Figma, a powerful tool for UI/UX design and prototyping.
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="icon">
+        <i class="fab fa-js-square"></i>
+      </div>
+      <div class="info">
+        <h3>JavaScript</h3>
+        <p>
+          I have proficiency in JavaScript, enabling me to create interactive and dynamic web applications.
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="icon">
         <i class="fas fa-file-word"></i>
       </div>
       <div class="info">
@@ -241,7 +266,7 @@
   </div>
 </section>
 <section class="Certifficate" id="Certifficate">
-  <h2 class="title">Certifficate</h2>
+  <h2 class="title">Certificate</h2>
   <div class="content">
     <div class="project-card">
       <div class="project-image">
